grid gap fixed

--- a/src/components/gridsection/gridsection.css
+++ b/src/components/gridsection/gridsection.css
@@ -4,7 +4,7 @@
 .grid-section .wrapper{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    /* row-gap: 50px; */
+    gap: 30px;
     background-color: unset !important;
 }
 .grid-section .wrapper .img-holder{
